--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="ControladorDB\ControlDocente.cs" />
     <Compile Include="ControladorDB\ControlMateria.cs" />
+    <Compile Include="ControlVistas\ControlVistaDocente.cs" />
     <Compile Include="ControlVistas\ControlVistaMateria.cs" />
     <Compile Include="Database\Conexion.cs" />
     <Compile Include="Database\DatabaseDocente.cs" />
