--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -60,17 +60,41 @@
     <Compile Include="Modelos\ModeloMateria.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vistas\agregardocentes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\agregardocentes.designer.cs">
+      <DependentUpon>agregardocentes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\agregarmaterias.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Vistas\agregarmaterias.Designer.cs">
       <DependentUpon>agregarmaterias.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\docentes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\docentes.designer.cs">
+      <DependentUpon>docentes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\materias.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Vistas\materias.Designer.cs">
       <DependentUpon>materias.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\mensajes_formularios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\mensajes_formularios.designer.cs">
+      <DependentUpon>mensajes_formularios.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -81,11 +105,23 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vistas\agregardocentes.resx">
+      <DependentUpon>agregardocentes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\agregarmaterias.resx">
       <DependentUpon>agregarmaterias.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\docentes.resx">
+      <DependentUpon>docentes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\materias.resx">
       <DependentUpon>materias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\mensajes_formularios.resx">
+      <DependentUpon>mensajes_formularios.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
