--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -87,6 +87,12 @@
     <Compile Include="Vistas\Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\grupos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\grupos.Designer.cs">
+      <DependentUpon>grupos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\materias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\grupos.resx">
+      <DependentUpon>grupos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\materias.resx">
       <DependentUpon>materias.cs</DependentUpon>
