--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Vistas\agregardocentes.designer.cs">
       <DependentUpon>agregardocentes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\agregargrupos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\agregargrupos.Designer.cs">
+      <DependentUpon>agregargrupos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\agregarmaterias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
     </Compile>
     <EmbeddedResource Include="Vistas\agregardocentes.resx">
       <DependentUpon>agregardocentes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\agregargrupos.resx">
+      <DependentUpon>agregargrupos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\agregarmaterias.resx">
       <DependentUpon>agregarmaterias.cs</DependentUpon>
