--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Vistas\agregargrupos.Designer.cs">
       <DependentUpon>agregargrupos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\agregarhorario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\agregarhorario.Designer.cs">
+      <DependentUpon>agregarhorario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\agregarmaterias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +139,9 @@
     <EmbeddedResource Include="Vistas\agregargrupos.resx">
       <DependentUpon>agregargrupos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\agregarhorario.resx">
+      <DependentUpon>agregarhorario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\agregarmaterias.resx">
       <DependentUpon>agregarmaterias.cs</DependentUpon>
     </EmbeddedResource>
@@ -144,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\grupos.resx">
       <DependentUpon>grupos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\horario.resx">
+      <DependentUpon>horario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\materias.resx">
       <DependentUpon>materias.cs</DependentUpon>
