cambio de la direccion de la database

--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -61,9 +61,11 @@
     <Compile Include="Database\Conexion.cs" />
     <Compile Include="Database\DatabaseDocente.cs" />
     <Compile Include="Database\DatabaseGrupo.cs" />
+    <Compile Include="Database\DatabaseHora.cs" />
     <Compile Include="Database\DatabaseMateria.cs" />
     <Compile Include="Modelos\ModeloDocente.cs" />
     <Compile Include="Modelos\ModeloGrupo.cs" />
+    <Compile Include="Modelos\ModeloHora.cs" />
     <Compile Include="Modelos\ModeloMateria.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
