--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ControladorDB\ControlDocente.cs" />
     <Compile Include="ControladorDB\ControlGrupo.cs" />
     <Compile Include="ControladorDB\ControlMateria.cs" />
+    <Compile Include="ControlVistas\ControlCamposVacios.cs" />
     <Compile Include="ControlVistas\ControlVistaDocente.cs" />
     <Compile Include="ControlVistas\ControlVistaGrupo.cs" />
     <Compile Include="ControlVistas\ControlVistaMateria.cs" />
