--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -38,7 +53,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.SQLite">
+    <Reference Include="System.Data.SQLite, Version=1.0.93.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
@@ -126,6 +142,12 @@
     <Compile Include="Vistas\materias.Designer.cs">
       <DependentUpon>materias.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\materias_grupo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\materias_grupo.Designer.cs">
+      <DependentUpon>materias_grupo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\mensajes_formularios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +190,9 @@
     <EmbeddedResource Include="Vistas\materias.resx">
       <DependentUpon>materias.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\materias_grupo.resx">
+      <DependentUpon>materias_grupo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\mensajes_formularios.resx">
       <DependentUpon>mensajes_formularios.cs</DependentUpon>
     </EmbeddedResource>
@@ -184,6 +209,20 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="ControladorDB\System.Data.SQLite.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 y x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
