Avance del generador de logo

--- a/Vista/GeneradorHorarioMVC.csproj
+++ b/Vista/GeneradorHorarioMVC.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControladorDB\ControlDocente.cs" />
+    <Compile Include="ControladorDB\ControlGenerador.cs" />
     <Compile Include="ControladorDB\ControlGrupo.cs" />
     <Compile Include="ControladorDB\ControlHora.cs" />
     <Compile Include="ControladorDB\ControlMateria.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="ControlVistas\ControlVistaMateriasDocentes.cs" />
     <Compile Include="Database\Conexion.cs" />
     <Compile Include="Database\DatabaseDocente.cs" />
+    <Compile Include="Database\DatabaseGenerador.cs" />
     <Compile Include="Database\DatabaseGrupo.cs" />
     <Compile Include="Database\DatabaseHora.cs" />
     <Compile Include="Database\DatabaseMateria.cs" />
